# HOBAKv1

./: .gitignore  CMakeLists.txt  README.md  bary_centric.py  config.json  csr.npy  eig.py  medial.py  off.py  save_tobj.py  test_em.ipynb  test_hausdorff.py  test_ps.py  test_qmat.py  vcpkg.json
data/: bar.ma  bar3.tobj  bar4.tobj  cap.tobj  test.ma  test_ref.ply  tet.tobj
ext/glvu/: glvu.h
output/bar2/: values.npy
output/bar2/snh/: indptr.npy  values.npy
output/bar2/stvk/: indices.npy  values.npy
projects/simulateScene/: simulateScene.cpp
src/Scenes/: BUNNY_DROP.h  SIMULATION_SCENE.h
src/Timestepper/: TIMESTEPPER.h
src/util/: DRAW_GL.cpp  FFMPEG_MOVIE.h  MATRIX_UTIL.h  TIMER.cpp  TIMER.h
